force-app/main/default/objects/Sales_Enablement_Support_Request__c/Sales_Enablement_Support_Request__c.object-meta.xml
<CustomObject>
    <label>Sales Enablement Support Request</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Enablement Support Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>