force-app/main/default/objects/Sales_Enablement_Support_Request__c/fields/Dept__c.field-meta.xml
<CustomField>
    <fullName>Dept__c</fullName>
    <label>Dept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>