force-app/main/default/objects/Sales_Enablement_Support_Request__c/fields/Describe_any_potential_challenges__c.field-meta.xml
<CustomField>
    <fullName>Describe_any_potential_challenges__c</fullName>
    <label>Describe any potential challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>