force-app/main/default/objects/Sales_Enablement_Support_Request__c/fields/How_do_you_intend_to_measure_success__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_intend_to_measure_success__c</fullName>
    <inlineHelpText>How do you intend to measure success? (What information will you collect and how often?)</inlineHelpText>
    <label>How do you intend to measure success?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>