force-app/main/default/objects/Sales_Enablement_Support_Request__c/fields/Length_of_Time_to_Complete_in_hours__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Time_to_Complete_in_hours__c</fullName>
    <inlineHelpText>Please enter the length of time to complete this request in hours.</inlineHelpText>
    <label>Length of Time to Complete (in hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>