force-app/main/default/objects/Sales_Enablement_Support_Request__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Enablement Support Requests</relationshipLabel>
    <relationshipName>Sales_Enablement_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>