force-app/main/default/objects/Sales_Enablement_Support_Request__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Enablement_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>