force-app/main/default/objects/Sales_Enablement_Support_Request__c/fields/What_is_the_nature_of_your_request__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_nature_of_your_request__c</fullName>
    <label>What is the nature of your request?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collateral Design</fullName>
            </value>
            <value>
                <fullName>Communication/Awareness</fullName>
            </value>
            <value>
                <fullName>Customer Presentation/FBR</fullName>
            </value>
            <value>
                <fullName>Director Enablement (Performance Management, Team Coaching)</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Meeting prep</fullName>
            </value>
            <value>
                <fullName>Practical Application of a Skill (Account Prioritization, Challenger Script Development, POVs, Whiteboards, Prospecting, Negotiations, etc)</fullName>
            </value>
            <value>
                <fullName>Recource Navigation (where do I go to find something or, how do I use my internal resources most effectively?)</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>