force-app/main/default/objects/Sales_Enablement_Support_Request__c/fields/What_s_the_timing__c.field-meta.xml
<CustomField>
    <fullName>What_s_the_timing__c</fullName>
    <label>What&apos;s the timing?</label>
    <type>TextArea</type>
</CustomField>