force-app/main/default/objects/Sales_Enablement_Support_Request__c/fields/Who_is_your_target_audience__c.field-meta.xml
<CustomField>
    <fullName>Who_is_your_target_audience__c</fullName>
    <inlineHelpText>Select all that apply.</inlineHelpText>
    <label>Who is your target audience?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Customer Facing Teams</fullName>
            </value>
            <value>
                <fullName>Channel Sales</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>DMS Sales</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare Sales</fullName>
            </value>
            <value>
                <fullName>IMFS</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>IPM Sales</fullName>
            </value>
            <value>
                <fullName>Legal Sales</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>National Sales</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Territory Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>