force-app/main/default/objects/Sales_Enablement_Support_Request__c/fields/Your_expectations_of_Sales_Enablement__c.field-meta.xml
<CustomField>
    <fullName>Your_expectations_of_Sales_Enablement__c</fullName>
    <inlineHelpText>What are your expectations of Sales Enablement for this request?</inlineHelpText>
    <label>Your expectations of Sales Enablement?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>