force-app/main/default/objects/Sales_Enablement_Support_Request__c/recordTypes/Sales_Enablement.recordType-meta.xml
<RecordType>
    <fullName>Sales_Enablement</fullName>
    <active>true</active>
    <label>Sales Enablement</label>
</RecordType>