force-app/main/default/objects/Sales_Enablement_Support_Request__c/validationRules/What_is_the_nature_of_your_request_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>What_is_the_nature_of_your_request_Other</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(What_is_the_nature_of_your_request__c, &quot;Other&quot;) &amp;&amp; ISBLANK(Other__c)</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>For Other, please use this field to describe the nature of your request.</errorMessage>
</ValidationRule>